--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,151 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  min-width: 400px;
+  max-width: 400px;
+  min-height: 568px;
+  max-height: 568px;
+  height: auto;
+  background-color: white;
+  border-radius: 10px;
+  position: relative;
   display: flex;
   flex-direction: column;
+  /* justify-content: space-between; */
+}
+
+.App:before {
+  content: "";
+  position: absolute;
+  /* width: ; */
+}
+
+.header {
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  background-color: #fafaff;
+  padding: 24px;
+  border-radius: 10px;  
 }
 
-.App-link {
-  color: #61dafb;
+.header-left {
+  width: 60%;
+  font-size: 26px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header-left p {
+  margin: 0;
+}
+
+.header-left--day {
+  color: #666bfb;
+  font-weight: 700;
+}
+
+.header-left--day span {
+  font-weight: 400;
+}
+
+.header-left--month {
+  color: #aaa;
+  font-size: 18px;
+}
+
+.header-right {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  width: 40%;
+}
+
+.header-right p {
+  margin: 0;
+  text-align: right;
+  margin-bottom: 8px;
+  color: #aaa;
+}
+
+.header-right button {
+  color: #fff;
+  background-color:#fb6f70;
+  border-radius: 4px;
+  border: none;
+  padding: 6px 8px;
+  font-size: 10px;
+  text-transform: uppercase;
+  width: fit-content;
+}
+
+.header-right button:hover {
+  cursor: pointer;
+}
+
+.header-right button:active {
+  opacity: 0.8;
+}
+
+.context {
+  /* flex-grow: 1; */
+  overflow-y: auto;
+}
+
+/* width */
+.context::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Track */
+.context::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+.context::-webkit-scrollbar-thumb {
+  background: #fb6f70;
+}
+
+/* Handle on hover */
+.context::-webkit-scrollbar-thumb:hover {
+  background: #ef5758;
+}
+
+.context-input {
+  display: flex;
+  align-items: center;
+  padding: 15px 24px;
+  border-top: 1px solid #e8eff5;
+  border-bottom: 1px solid #e8eff5;
+}
+
+.context-input .context-input--add {
+  margin-right: 13px;
+  font-size: 40px;
+  font-weight: 100;
+  margin-top: -8px;
+  color: #aaa
+}
+
+.context-input .context-input--add:hover {
+  cursor: pointer;
+}
+
+.context-input input {
+  flex: 1;
+  font-size: 20px;
+  border: none ;
+  outline: none;
+  color: #aaa;
+}
+
+.context-input input::-webkit-input-placeholder {
+  color: #aaa;
+}
+
+.context-list {
+  padding: 0 24px;
+}
+
+.footer {
+  margin-top: auto;
+  padding: 24px;
+  text-align: center;
 }
